Call to Action page

--- a/supergood_reads/static/css/main.css
+++ b/supergood_reads/static/css/main.css
@@ -28,6 +28,6 @@
   src: url('/fonts/linguistics-pro/LinguisticsPro-Italic.otf') format('opentype');
 }
 
-.supergood-logo {
+.supergood-font {
   font-family: LinguisticsPro, sans-serif;
 }
