--- a/supergood_reads/templates/supergood_reads/forms/_date_picker.html
+++ b/supergood_reads/templates/supergood_reads/forms/_date_picker.html
@@ -30,7 +30,7 @@
                         {{ year_field|add_class:"block w-24 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" }}
                     </div>
                 </div>
-                <p class="mt-2 text-sm text-gray-500">It's okay to enter an estimated date (just a month and year; or only a year).</p>
+                <p class="mt-2 text-sm text-gray-500">It's okay to enter an estimated date (just a month and year, or just a year).</p>
             </div>
         </div>
     </div>
