--- a/supergood_reads/templates/supergood_reads/_field_wrapper.html
+++ b/supergood_reads/templates/supergood_reads/_field_wrapper.html
@@ -6,9 +6,9 @@
     {% include "supergood_reads/_radioselect_field_wrapper.html" with field=field %}
 {% else %}
     <div class="space-y-6 sm:space-y-5">
-        <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:pt-5 {% if border %} sm:border-t sm:border-gray-200 {% endif %}">
+        <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5 {% if border %} sm:border-t sm:border-gray-200 {% endif %}">
             {% if not label_above %}
-                <label for="{{ field.id_for_label }}" class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">
+                <label for="{{ field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                     {{ field.label }}
                 </label>
             {% else %}
@@ -17,7 +17,7 @@
             <div class="mt-1 sm:col-span-2 sm:mt-0">
                 {{ field.errors }}
                 {% if label_above %}
-                    <label for="{{ field.id_for_label }}" class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">
+                    <label for="{{ field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                         {{ field.label }}
                     </label>
                 {% endif %}
