--- a/supergood_reads/templates/supergood_reads/create_review.html
+++ b/supergood_reads/templates/supergood_reads/create_review.html
@@ -39,17 +39,20 @@
                         {% for media_type_id, media_type_form in media_type_forms.items %}
                             <div v-show="{{media_type_id}} == selectedMediaTypeContentType">
                                 <div v-show="!shouldCreateNewMediaTypeObject">
-                                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:pt-5">
-                                        <div class="col-start-2">
+                                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5">
+                                        <div></div>
+                                        <div class="mt-1 sm:col-span-2 sm:mt-0">
                                             {{ review_form.media_type_object_id.errors }}
-                                            <autocomplete
-                                                field-data-json-script-id="media_type_object_id_field_data"
-                                                state-key="selectedMediaTypeObjectId"
-                                                url={{ media_type_form.autocomplete_url }}
-                                                csrf-token={{csrf_token}}
-                                                :should-fetch-initial="{{media_type_id}} == selectedMediaTypeContentType"
-                                            >
-                                            </autocomplete>
+                                            <div class="max-w-lg">
+                                                <autocomplete
+                                                    field-data-json-script-id="media_type_object_id_field_data"
+                                                    state-key="selectedMediaTypeObjectId"
+                                                    url={{ media_type_form.autocomplete_url }}
+                                                    csrf-token={{csrf_token}}
+                                                    :should-fetch-initial="{{media_type_id}} == selectedMediaTypeContentType"
+                                                >
+                                                </autocomplete>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
