--- a/supergood_reads/templates/supergood_reads/forms/_date_picker.html
+++ b/supergood_reads/templates/supergood_reads/forms/_date_picker.html
@@ -2,8 +2,8 @@
 
 <fieldset>
     <div class="space-y-6 sm:space-y-5 {% if border %} sm:border-t sm:border-gray-200 {% endif %}">
-        <div class="{% if label_above %} sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:pt-5 sm:border-t sm:border-gray-200 {% endif %}">
-            <legend class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">When did you finish it?</legend>
+        <div class="{% if label_above %} sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5 sm:border-t sm:border-gray-200 {% endif %}">
+            <legend class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">When did you finish it?</legend>
             <div class="mt-1 sm:col-span-2 sm:mt-0">
                 <div>
                     {{ day_field.errors }}
@@ -12,19 +12,19 @@
                 </div>
                 <div class="mt-1 sm:mt-0 flex flex-wrap gap-4">
                     <div>
-                        <label for="{{ day_field.id_for_label }}" class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">
+                        <label for="{{ day_field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                             {{ day_field.label }}
                         </label>
                         {{ day_field|add_class:"block w-fit rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm"}}
                     </div>
                     <div>
-                        <label for="{{ month_field.id_for_label }}" class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">
+                        <label for="{{ month_field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                             {{ month_field.label }}
                         </label>
                         {{ month_field|add_class:"block w-fit rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" }}
                     </div>
                     <div>
-                        <label for="{{ year_field.id_for_label }}" class="block font-medium text-gray-700 sm:mt-px sm:pt-2 sm:text-sm">
+                        <label for="{{ year_field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                             {{ year_field.label }}
                         </label>
                         {{ year_field|add_class:"block w-24 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" }}
