--- a/supergood_reads/templates/supergood_reads/_nav_bar.html
+++ b/supergood_reads/templates/supergood_reads/_nav_bar.html
@@ -29,37 +29,34 @@
                     <!-- Profile dropdown -->
                     <div class="relative ml-3">
                         {% if user.is_authenticated %}
-                            <div>
-                                <button type="button" @click="toggleMenuOpen" class="relative flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                            <headless-menu>
+                                <headless-menu-button type="button" @click="toggleMenuOpen" class="relative flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                     <span class="absolute -inset-1.5"></span>
                                     <span class="sr-only">Open user menu</span>
                                     {% include "supergood_reads/svg/user_circle.html" %}
-                                </button>
-                            </div>
+                                </headless-menu-button>
+                                <headless-menu-items class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+                                    {% for link in account_nav_bar_links %}
+                                        <headless-menu-item>
+                                            <a
+                                                href={{ link.url }}
+                                                class="{% if link.current %} bg-indigo-50 {% endif %} hover:bg-indigo-50 block px-4 py-2 text-sm text-gray-700"
+                                                role="menuitem" tabindex="-1" id="user-menu-item-{{ forloop.counter0 }}"
+                                            >
+                                                {{ link.label }}
+                                            </a>
+                                        </headless-menu-item>
+                                    {% endfor %}
+                                </headless-menu-items>
+                            </headless-menu>
                         {% else %}
                             <a href={% url 'login' %} class="ml-6 inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</a>
-                        {% endif %}
-                        <!--
-              Dropdown menu, show/hide based on menu state.
-            -->
-                        {% if user.is_authenticated %}
-                            <div v-if="menuOpen" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-                                {% for link in account_nav_bar_links %}
-                                    <a
-                                        href={{ link.url }}
-                                        class="{% if link.current %} bg-gray-100 {% endif %} block px-4 py-2 text-sm text-gray-700"
-                                        role="menuitem" tabindex="-1" id="user-menu-item-{{ forloop.counter0 }}"
-                                    >
-                                        {{ link.label }}
-                                    </a>
-                                {% endfor %}
-                            </div>
                         {% endif %}
                     </div>
                 </div>
                 <div class="-mr-2 flex items-center sm:hidden">
                     <!-- Mobile menu button -->
-                    <button type="button" @click="toggleMenuOpen" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-controls="mobile-menu" aria-expanded="false">
+                    <button type="button" @click="toggleMenuOpen" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-indigo-50 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-controls="mobile-menu" aria-expanded="false">
                         <span class="absolute -inset-0.5"></span>
                         <span class="sr-only">Open main menu</span>
                         <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -76,7 +73,7 @@
                 {% for link in primary_nav_bar_links %}
                     <a
                         href={{ link.url }}
-                        class="{% if link.current %} bg-gray-100 text-gray-900 {% else %} text-gray-900 hover:bg-gray-50 hover:text-gray-900 {% endif %} block rounded-md py-2 px-3 text-base font-medium"
+                        class="{% if link.current %} bg-indigo-50 text-gray-900 {% else %} text-gray-900 hover:bg-indigo-50 hover:text-gray-900 {% endif %} block rounded-md py-2 px-3 text-base font-medium"
                         {% if link.current %}aria-current="page"{% endif %}
                     >
                         {{ link.label }}
@@ -95,7 +92,7 @@
                     </div>
                     <div class="mt-3 space-y-1">
                         {% for link in account_nav_bar_links %}
-                            <a href={{ link.url }} class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800">{{ link.label }}</a>
+                            <a href={{ link.url }} class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-indigo-50 hover:text-gray-800">{{ link.label }}</a>
                         {% endfor %}
                     </div>
                 {% else %}
