--- a/supergood_reads/templates/supergood_reads/media.html
+++ b/supergood_reads/templates/supergood_reads/media.html
@@ -3,7 +3,7 @@
 {% load django_vite %}
 
 {% block header %}
-    My Media
+    {% include "supergood_reads/_basic_header.html" with title="My Media" %}
 {% endblock header %}
 
 {% block content %}
