--- a/supergood_reads/templates/supergood_reads/update_review.html
+++ b/supergood_reads/templates/supergood_reads/update_review.html
@@ -1,7 +1,7 @@
 {% extends "supergood_reads/create_review.html" %}
 
 {% block header %}
-    Update Review
+    {% include "supergood_reads/_basic_header.html" with title="Update Review" %}
 {% endblock header %}
 
 {% block content %}
