--- a/supergood_reads/templates/supergood_reads/reviews.html
+++ b/supergood_reads/templates/supergood_reads/reviews.html
@@ -4,7 +4,28 @@
 {% load review_row %}
 
 {% block header %}
-    My Reviews
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between">
+            <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
+                My Reviews
+            </h1>
+            <div class="flex-shrink-0">
+                <a href={% url 'create_review' %} class="relative inline-flex items-center gap-x-1.5 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                    <svg class="-ml-0.5 h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
+                    </svg>
+                    New Review
+                </a>
+            </div>
+        </div>
+        {% if not user.is_authenticated%}
+            <div class="max-w-2xl lg:mx-0">
+                <p class="mt-6 text-md text-gray-600">
+                    These are just some demo reviews to get you started. If you want to create your own, please <a href={% url "login" %} class="font-medium text-indigo-600 underline">sign in</a>!
+                </p>
+            </div>
+        {% endif %}
+    </div>
 {% endblock header %}
 
 {% block content %}
