add demo Reviews and validated MediaTypes

--- a/supergood_reads/templates/supergood_reads/_media_row.html
+++ b/supergood_reads/templates/supergood_reads/_media_row.html
@@ -15,10 +15,10 @@
     <tr is="vue:my-media-row"
         initial-title="{{item.title}}"
         initial-creator="{{item.author}}"
-        initial-year="{{item.publication_year}}"
+        initial-year="{{item.year}}"
         title-field-name="title"
         creator-field-name="author"
-        year-field-name="publication_year"
+        year-field-name="year"
         media-type="Book"
         csrf-token={{csrf_token}}
         update-url={% url 'update_book' item.id %}
@@ -26,7 +26,7 @@
     >
         {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
         {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.author v_slot_name="creator-field" %}
-        {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.publication_year v_slot_name="year-field" %}
+        {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.year v_slot_name="year-field" %}
         {% url 'delete_review' object.id as delete_url %}
         {% include "supergood_reads/forms/_delete_form.html" with url=delete_url %}
     </tr>
@@ -34,10 +34,10 @@
     <tr is="vue:my-media-row"
         initial-title="{{item.title}}"
         initial-creator="{{item.director}}"
-        initial-year="{{item.release_year}}"
+        initial-year="{{item.year}}"
         title-field-name="title"
         creator-field-name="director"
-        year-field-name="release_year"
+        year-field-name="year"
         media-type="Film"
         csrf-token={{csrf_token}}
         update-url={% url 'update_film' item.id %}
@@ -45,7 +45,7 @@
     >
         {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
         {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.director v_slot_name="creator-field" %}
-        {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.release_year v_slot_name="year-field" %}
+        {% include "supergood_reads/forms/_media_field_wrapper.html" with field=form.year v_slot_name="year-field" %}
         {% url 'delete_review' object.id as delete_url %}
         {% include "supergood_reads/forms/_delete_form.html" with url=delete_url %}
     </tr>
