--- a/supergood_reads/templates/supergood_reads/reviews.html
+++ b/supergood_reads/templates/supergood_reads/reviews.html
@@ -18,39 +18,43 @@
                 </a>
             </div>
         </div>
-        {% if not user.is_authenticated%}
-            <div class="max-w-2xl lg:mx-0">
-                <p class="mt-6 text-md text-gray-600">
+        <div class="max-w-2xl lg:mx-0">
+            <p class="mt-6 text-md text-gray-600">
+                {% if not user.is_authenticated %}
                     These are just some demo reviews to get you started. If you want to create your own, please <a href={% url "login" %} class="font-medium text-indigo-600 underline">sign in</a>!
-                </p>
-            </div>
-        {% endif %}
+                {% elif not review_list %}
+                    You have no reviews yet!
+                {% endif %}
+            </p>
+        </div>
     </div>
 {% endblock header %}
 
 {% block content %}
     {% vite_asset 'js/apps/reviewList.ts' %}
-    <div class="px-4 sm:px-0" id="review-list-vue-app">
-        <div class="-mx-4 mt-8 sm:-mx-0">
-            <table class="table-fixed min-w-full divide-y divide-gray-300">
-                <thead>
-                    <tr>
-                        <th scope="col" class="py-3.5 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Title</th>
-                        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Creator</th>
-                        <th scope="col" class="hidden px-3 py-3.5 text-right text-sm font-semibold text-gray-900 md:table-cell w-28">Completed</th>
-                        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Rating</th>
-                        <th scope="col" class="py-3.5 sm:pl-2 sm:pr-0">
-                            <span class="sr-only">Edit</span>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody class="divide-y divide-gray-200 bg-white">
-                    {% for review in review_list %}
-                        {% review_row review=review %}
-                    {% endfor %}
-                </tbody>
-            </table>
-            {% include "supergood_reads/_pagination.html" %}
+    {% if review_list %}
+        <div class="px-4 sm:px-0" id="review-list-vue-app">
+            <div class="-mx-4 mt-8 sm:-mx-0">
+                <table class="table-fixed min-w-full divide-y divide-gray-300">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="py-3.5 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Title</th>
+                            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Creator</th>
+                            <th scope="col" class="hidden px-3 py-3.5 text-right text-sm font-semibold text-gray-900 md:table-cell w-28">Completed</th>
+                            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Rating</th>
+                            <th scope="col" class="py-3.5 sm:pl-2 sm:pr-0">
+                                <span class="sr-only">Edit</span>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200 bg-white">
+                        {% for review in review_list %}
+                            {% review_row review=review %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% include "supergood_reads/_pagination.html" %}
+            </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock content %}
