--- a/supergood_reads/static/css/main.css
+++ b/supergood_reads/static/css/main.css
@@ -1,33 +1,3 @@
-/* Overwrite django's errorlist class styling. */
-.errorlist {
-  @apply mb-2 text-sm text-red-600;
-}
-
-@font-face {
-  font-family: LinguisticsPro;
-  src: url('/fonts/linguistics-pro/LinguisticsPro-Regular.otf') format('opentype');
-}
-
-@font-face {
-  font-weight: bold;
-  font-family: LinguisticsPro;
-  src: url('/fonts/linguistics-pro/LinguisticsPro-Bold.otf') format('opentype');
-}
-
-@font-face {
-  font-weight: bold;
-  font-family: LinguisticsPro;
-  font-style: italic;
-  src: url('/fonts/linguistics-pro/LinguisticsPro-BoldItalic.otf') format('opentype');
-}
-
-@font-face {
-  font-weight: normal;
-  font-family: LinguisticsPro;
-  font-style: italic;
-  src: url('/fonts/linguistics-pro/LinguisticsPro-Italic.otf') format('opentype');
-}
-
-.supergood-font {
-  font-family: LinguisticsPro, sans-serif;
-}
+@import './tailwind.css';
+@import './django.css';
+@import './fonts.css';
