--- a/supergood_reads/templates/supergood_reads/_field_wrapper.html
+++ b/supergood_reads/templates/supergood_reads/_field_wrapper.html
@@ -6,7 +6,7 @@
     {% include "supergood_reads/_radioselect_field_wrapper.html" with field=field %}
 {% else %}
     <div class="space-y-6 sm:space-y-5">
-        <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5 {% if border %} sm:border-t sm:border-gray-200 {% endif %}">
+        <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5">
             {% if not label_above %}
                 <label for="{{ field.id_for_label }}" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">
                     {{ field.label }}
