--- a/tests/sample_app/templates/sample_app/basic_auth/sign_up.html
+++ b/tests/sample_app/templates/sample_app/basic_auth/sign_up.html
@@ -16,9 +16,9 @@
                 {% csrf_token %}
                 <div>
                     {{ form.non_field_errors }}
-                    {% field_wrapper form.username border=False label_above=True %}
-                    {% field_wrapper form.password1 border=False label_above=True %}
-                    {% field_wrapper form.password2 border=False label_above=True %}
+                    {% field_wrapper form.username label_above=True %}
+                    {% field_wrapper form.password1 label_above=True %}
+                    {% field_wrapper form.password2 label_above=True %}
                 </div>
                 <div>
                     <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
