--- a/supergood_reads/templates/supergood_reads/forms/custom_fields/autocomplete.html
+++ b/supergood_reads/templates/supergood_reads/forms/custom_fields/autocomplete.html
@@ -1,16 +1,18 @@
 {% extends "supergood_reads/forms/_field_wrapper.html" %}
 
 {% load widget_tweaks %}
+{% load forms %}
 {% load tags %}
 
 {% block field %}
+    {{ field|field_to_dict|vue_json_script:field_data_json_script_id }}
     <div class="max-w-lg">
         <autocomplete
-            field-data-json-script-id={{ field_data_json_script_id }}
-            state-key={{ state_key }}
-            url={{ url }}
-            csrf-token={% csrf_token %}
-            :should-fetch-initial={{ should_fetch_initial }}
+            initial-value-id="{{ initial_value_id }}"
+            csrf-token="{{ csrf_token }}"
+            field-data-json-script-id="{{ field_data_json_script_id }}"
+            state-key="{{ state_key }}"
+            url="{{ url }}"
         >
         </autocomplete>
     </div>
