clean up date_picker

--- a/supergood_reads/templates/supergood_reads/_my_reviews_row.html
+++ b/supergood_reads/templates/supergood_reads/_my_reviews_row.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
-{% load tags %}
-{% load date_picker %}
+{% load vue_tags %}
+{% load forms %}
 
 {{ initial_data|vue_json_script:json_script_id }}
 <tr is="vue:my-reviews-row"
