--- a/supergood_reads/templates/supergood_reads/forms/custom_fields/date_picker.html
+++ b/supergood_reads/templates/supergood_reads/forms/custom_fields/date_picker.html
@@ -2,7 +2,7 @@
 
 <fieldset>
     <div class="space-y-6 sm:space-y-5">
-        <div class="{% if label_above %} sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5 sm:border-t sm:border-gray-200 {% endif %}">
+        <div class="{% if label_above %} sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 pt-5 {% endif %}">
             <legend class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">When did you finish it?</legend>
             <div class="mt-1 sm:col-span-2 sm:mt-0">
                 <div>
