--- a/supergood_reads/templates/supergood_reads/views/login.html
+++ b/supergood_reads/templates/supergood_reads/views/login.html
@@ -1,31 +1,18 @@
 {% extends "supergood_reads/views/base/base.html" %}
 
-{% load forms %}
-
 {% block content %}
     <div class="flex min-h-full flex-col justify-center items-center px-6 py-12 lg:px-8">
-        <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <div class="flex justify-center items-center">
-                {% include "supergood_reads/components/svg/logo_book.html" %}
-            </div>
-            <h2 class="text-center mt-5 text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
-        </div>
+        {% include "supergood_reads/components/svg/logo_book.html" %}
+        <h2 class="text-center mt-5 text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
 
-        <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <form class="space-y-3" method="POST">
-                {% csrf_token %}
+        <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+            <form class="space-y-6" action="#" method="POST">
                 <div>
-                    {{ form.non_field_errors }}
-                    {% supergood_field form.username label_above=True %}
-                    {% supergood_field form.password label_above=True %}
-                </div>
-                {% comment %} <div>
                     <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
                     <div class="mt-2">
                         <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
-
 
                 <div>
                     <div class="flex items-center justify-between">
@@ -37,16 +24,12 @@
                     <div class="mt-2">
                         <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
-                </div> {% endcomment %}
+                </div>
 
                 <div>
                     <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
                 </div>
             </form>
-            <p class="mt-10 text-center text-sm text-gray-500">
-                Don't have an account?
-                <a href={% url 'sign_up' %} class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Sign up here!</a>
-            </p>
         </div>
     </div>
 {% endblock content %}
