--- a/tests/sample_app/templates/sample_app/basic_auth/password_change.html
+++ b/tests/sample_app/templates/sample_app/basic_auth/password_change.html
@@ -1,4 +1,4 @@
-{% extends 'supergood_reads/base.html' %}
+{% extends 'supergood_reads/views/base/base.html' %}
 
 {% block content %}
     <h2>Change Password</h2>
