--- a/tests/sample_app/templates/sample_app/basic_auth/sign_up.html
+++ b/tests/sample_app/templates/sample_app/basic_auth/sign_up.html
@@ -1,12 +1,12 @@
-{% extends "supergood_reads/base.html" %}
+{% extends "supergood_reads/views/base/base.html" %}
 
-{% load tags %}
+{% load forms %}
 
 {% block content %}
     <div class="flex min-h-full flex-col justify-center items-center px-6 py-12 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
             <div class="flex justify-center items-center">
-                {% include "supergood_reads/svg/logo_book.html" %}
+                {% include "supergood_reads/components/svg/logo_book.html" %}
             </div>
             <h2 class="text-center mt-5 text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign up for an account</h2>
         </div>
@@ -16,9 +16,9 @@
                 {% csrf_token %}
                 <div>
                     {{ form.non_field_errors }}
-                    {% field_wrapper form.username label_above=True %}
-                    {% field_wrapper form.password1 label_above=True %}
-                    {% field_wrapper form.password2 label_above=True %}
+                    {% supergood_field form.username label_above=True %}
+                    {% supergood_field form.password1 label_above=True %}
+                    {% supergood_field form.password2 label_above=True %}
                 </div>
                 <div>
                     <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
