--- a/supergood_reads/templates/supergood_reads/components/_basic_header.html
+++ b/supergood_reads/templates/supergood_reads/components/_basic_header.html
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 mb-10">
     <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
         {{ title }}
     </h1>
