--- a/supergood_reads/templates/supergood_reads/components/forms/fields/default.html
+++ b/supergood_reads/templates/supergood_reads/components/forms/fields/default.html
@@ -3,5 +3,5 @@
 {% load widget_tweaks %}
 
 {% block field %}
-    {{ field|add_class:"block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" }}
+    {{ field|add_class:"block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" }}
 {% endblock field %}
