--- a/tests/sample_app/templates/sample_app/basic_auth/login.html
+++ b/tests/sample_app/templates/sample_app/basic_auth/login.html
@@ -12,13 +12,11 @@
         </div>
 
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <form class="space-y-3" method="POST">
+            <form class="space-y-6" method="POST">
                 {% csrf_token %}
-                <div>
-                    {{ form.non_field_errors }}
-                    {% supergood_field form.username label_above=True %}
-                    {% supergood_field form.password label_above=True %}
-                </div>
+                {{ form.non_field_errors }}
+                {% supergood_field form.username label_above=True %}
+                {% supergood_field form.password label_above=True %}
                 {% comment %} <div>
                     <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
                     <div class="mt-2">
@@ -39,7 +37,7 @@
                     </div>
                 </div> {% endcomment %}
 
-                <div>
+                <div class="">
                     <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
                 </div>
             </form>
