--- a/supergood_reads/templates/supergood_reads/views/base/_messages.html
+++ b/supergood_reads/templates/supergood_reads/views/base/_messages.html
@@ -3,12 +3,20 @@
 
 <div id="messages-vue-app">
     {% if messages %}
-        {% for message in messages %}
-            <simple-notification
-                message="{{message.message}}"
-                level-tag="{{message.level_tag}}"
-            >
-            </simple-notification>
-        {% endfor %}
+        <!-- Global notification live region, render this permanently at the end of the document -->
+        <div
+            aria-live="assertive"
+            class="pointer-events-none z-10 fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
+        >
+            <div class="flex w-full flex-col items-center space-y-4 sm:items-end">
+                {% for message in messages %}
+                    <simple-notification
+                        message="{{message.message}}"
+                        level-tag="{{message.level_tag}}"
+                    >
+                    </simple-notification>
+                {% endfor %}
+            </div>
+        </div>
     {% endif %}
 </div>
