--- a/supergood_reads/templates/supergood_reads/views/base/_nav_bar.html
+++ b/supergood_reads/templates/supergood_reads/views/base/_nav_bar.html
@@ -4,21 +4,21 @@
 {% vite_asset 'js/apps/navBar.ts' %}
 
 {% block content %}
-    <nav id="new-nav-bar-vue-app" class="bg-gradient-to-tr from-amber-50 to-orange-50 shadow">
+    <nav id="nav-bar-vue-app" class="bg-gradient-to-tr from-amber-50 to-orange-50 shadow">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 align-text-bottom">
-            <div class="flex h-16 justify-between">
-                <div class="flex">
+            <div class="flex h-12 justify-between">
+                <div class="flex sm:py-1 items-baseline h-full">
                     <a
-                        class="supergood-font hover:bg-indigo-50 flex items-center px-2 my-2 rounded-md"
+                        class="supergood-font h-full hover:bg-indigo-50 flex items-center px-2 rounded-md"
                         href={% url 'home' %}
                     >
                         supergood<span>{% include "supergood_reads/components/svg/logo_book.html" %}</span>reads
                     </a>
-                    <div class="hidden sm:ml-6 sm:flex sm:space-x-8 sm:py-1">
+                    <div class="hidden sm:ml-2 sm:space-x-2 sm:flex sm:items-baseline h-full">
                         {% for link in primary_nav_bar_links %}
                             <a
                                 href={{ link.url }}
-                                class="{% if link.current %} bg-indigo-50 text-gray-900 {% else %} text-gray-900 hover:bg-indigo-50 hover:text-gray-900 {% endif %} inline-flex items-center rounded-md py-1 my-1 px-3 text-sm font-medium" {% if link.current %} aria-current="page" {% endif %}
+                                class="{% if link.current %} bg-indigo-50 text-gray-900 {% else %} text-gray-900 hover:bg-indigo-50 hover:text-gray-900 {% endif %} h-full inline-flex items-center rounded-md px-3 text-sm font-medium" {% if link.current %} aria-current="page" {% endif %}
                             >
                                 {{ link.label }}
                             </a>
