Add action buttons to MediaList

--- a/supergood_reads/templates/supergood_reads/views/media_list/media_list.html
+++ b/supergood_reads/templates/supergood_reads/views/media_list/media_list.html
@@ -4,7 +4,7 @@
 {% load django_vite %}
 
 {% block header %}
-    {% basic_header "My Media" %}
+    {% basic_header "Media" %}
 {% endblock header %}
 
 {% block content %}
