--- a/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
+++ b/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
@@ -41,7 +41,7 @@
     <td class="py-4 sm:pl-3 text-right text-sm font-medium align-top sm:pr-0">
         <a
             type="button"
-            class="text-indigo-600 hover:text-indigo-900 align-top w-12"
+            class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
             href="{% url 'update_review' review.id %}"
         >
             Edit <span class="sr-only">, Review of {{ title }}</span>
