clean up ReviewRowText overflow handling

--- a/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
+++ b/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
@@ -38,7 +38,7 @@
         {{ rating_html|safe }}
     </td>
     <!-- Edit Button -->
-    <td class="py-4 sm:pl-3 text-right text-sm font-medium align-top sm:pr-0">
+    <td class="py-4 sm:pl-3 text-right text-sm font-medium align-top sm:pr-0 grid">
         <a
             type="button"
             class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
